# nexushub

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  package.json
.github/workflows/: ci.yml  release.yml
contracts/: nexushub-contract.json  nexushub-contract.schema.json
crates/nexushub-core/: Cargo.toml
crates/nexushub-core/src/: app_server.rs  archive.rs  claude_code.rs  codex.rs  config.rs  crypto.rs  db.rs  jobs.rs  lib.rs  local.rs  platform.rs  probe.rs  providers.rs  security.rs  sentinel.rs  system.rs  update.rs  uploads.rs
crates/nexushub-core/src/codex/: mutations.rs  paths.rs  rollout_events.rs  session_index.rs  tests.rs  thread_rows.rs  types.rs
crates/nexushub-core/src/services/: app_server_threads.rs  cleanup.rs  commands.rs  contract_dtos.rs  desktop_webui.rs  goals.rs  jobs.rs  mod.rs  probe.rs  security.rs  settings.rs  system.rs  threads.rs  updates.rs  uploads.rs  use_cases.rs
crates/nexushub-core/tests/: architecture_plans.rs  contract_registry.rs  nexushub_framework.rs  service_action_facades.rs  settings_system_services.rs  update_analysis.rs  updates_service.rs  use_case_facades.rs
crates/nexushub-webd/: Cargo.toml
crates/nexushub-webd/src/: api.rs  linux_adapter.rs  main.rs  state.rs  turnstile.rs
crates/nexushubd/: Cargo.toml
crates/nexushubd/src/: api.rs  auth.rs  linux_adapter.rs  main.rs  rpc_payload.rs  rpc_surface.rs  state.rs  turnstile.rs
crates/nexushubd/src/api/: entry_contract_tests.rs  integration_tests.rs  jobs.rs  legacy_routes_tests.rs  probe.rs  routes.rs  rpc_dispatch.rs  security.rs  system.rs  test_support.rs  threads.rs  uploads.rs  web_auth.rs
deploy/desktop/macos/: README.md
deploy/nexushub/: config.example.toml  env.example  install.sh  nexushub-codex-precheck  nexushub-codex-prune  nexushub-probe-legacy-cleanup  nginx-location.conf  systemd.service  update.sh
deploy/nexushub-webd/: README.md  config.example.toml  env.example  install.sh  nexushub-codex-update  nginx.conf  rollback.sh  systemd.service  update.sh  web-update.sh
deploy/nexushub/cloudflare-tunnel/: cloudflared-nexushub
deploy/nexushub/macos/: README.md  com.nexushub.nexushub.plist  install.sh  uninstall.sh
desktop-ui/: .gitignore  index.html  package.json  pnpm-lock.yaml
desktop-ui/src/: App.tsx  styles.css  tauri.ts
docs/: cloud-deploy-runbook.md  cloudflare-tunnel.md
docs/analysis/: cc-switch-architecture-parity.md  module-inventory.md  project-overview.md  risk-assessment.md
docs/plan/: dependency-graph.md  feature-sync-workflow.md  milestones.md  task-breakdown.md
docs/progress/: MASTER.md  phase-1-governance-baseline.md  phase-2-codex-non-regression.md  phase-3-provider-framework.md  phase-4-webui-information-architecture.md  phase-5-three-platform-service-model.md  phase-6-verification-and-release-readiness.md
scripts/: contract-next-action-checklist.mjs  deploy-cloud.sh  package-darwin-arm64.sh  package-linux-tauri-x86_64.sh  package-linux.sh  package-webd-linux-x86_64.sh  test-install-script.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: nexushub-webd  nexushubd
src-tauri/src/: desktop_api.rs  desktop_boot.rs  entry_guard_tests.rs  lib.rs  main.rs  overview.rs  resources.rs
src-tauri/src/commands/: desktop_webui.rs  jobs.rs  mod.rs  probe.rs  settings.rs  system.rs  threads.rs  updates.rs
src-tauri/src/services/: actions.rs  desktop_webui.rs  goals.rs  jobs.rs  mod.rs  probe.rs  settings.rs  system.rs  threads.rs  updates.rs
src-tauri/src/services/threads/: types.rs
src-tauri/tests/: probe_commands.rs
webui/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
webui/public/: nexushub-boot.js
webui/src/: App.test.ts  App.tsx  main.test.ts  main.tsx  styles.css  types.ts  vite-env.d.ts
webui/src/hooks/: useConversationController.ts
webui/src/lib/: api.test.ts  api.ts  probeUi.test.ts  probeUi.ts  runtime.test.ts  runtime.ts  session.ts  threadMessageStore.test.ts  (+1 more)
(+60 files in other folders)
