[workspace]
members = [
  "crates/nexushub-core",
  "crates/nexushubd",
]
resolver = "2"

[workspace.package]
version = "0.1.133"
edition = "2021"
license = "MIT"
repository = "https://github.com/lich13/nexushub"
rust-version = "1.86"

[workspace.dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
async-stream = "0.3"
axum = { version = "0.7", features = ["macros", "multipart"] }
base64 = "0.22"
calamine = "0.26"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3"
dirs = "5.0"
futures = "0.3"
hex = "0.4"
lopdf = "0.34"
mime_guess = "2.0"
quick-xml = "0.36"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate"] }
rusqlite = { version = "0.31", features = ["bundled", "hooks"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "process", "sync", "io-util"] }
tokio-stream = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs", "set-header", "trace"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
walkdir = "2.5"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
