[package]
name = "nexushub-desktop"
version = "0.1.109"
description = "NexusHub macOS desktop console"
authors = ["NexusHub contributors"]
license = "MIT"
repository = "https://github.com/lich13/nexushub"
edition = "2021"
rust-version = "1.85.0"
default-run = "nexushub"
autobins = false

[workspace]

[lib]
name = "nexushub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
doctest = false

[[bin]]
name = "nexushub"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dirs = "5.0"
nexushub-core = { path = "../crates/nexushub-core" }
opener = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.8.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tokio = { version = "1.37", features = ["rt-multi-thread"] }
toml = "0.8"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3"
