[package]
name = "nexushub-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
calamine.workspace = true
chrono.workspace = true
csv.workspace = true
dirs.workspace = true
lopdf.workspace = true
mime_guess.workspace = true
quick-xml.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
hex.workspace = true
rand.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
walkdir.workspace = true
zip.workspace = true
